# HlsCmafStreamingPackageGeneration

./: .gitignore  CLAUDE.md  Dockerfile  Dockerfile.cuda  README.md  docker-compose.yml  pyproject.toml  test_s3_pipeline.py
config/: default.yaml
src/hlspkg/: __init__.py  cli.py  exceptions.py  ffutil.py  models.py  shakautil.py
src/hlspkg/config/: __init__.py  loader.py  schema.py
src/hlspkg/core/: encoder.py  package.py  pipeline.py  preflight.py  transcode.py
src/hlspkg/publish/: __init__.py  publisher.py
src/hlspkg/storage/: __init__.py  base.py  local.py  s3.py
